# frame-picker

./: .env.example  .gitignore  .prototools  .windsurfrules  AWS_MIGRATION_CONTEXT.md  BILLING.md  CLAUDE.md  Complete Brand Assets Package.md  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  yoyo.ini
ai_service/: main.py
ai_service/core/: frame_extractor.py  frame_selector.py
api/: __init__.py
api/app/: __init__.py  config.py  dependencies.py  main.py  models.py
api/app/billing/: __init__.py  plans.py  stripe_client.py
api/app/database/: __init__.py  billing_models.py  connection.py  models.py
api/app/enums/: __init__.py  mode.py  payment_status.py  quality.py  status.py  subscription_status.py  subscription_type.py  tier.py
api/app/models/: __init__.py  auth.py  base.py  common.py  processing.py  session.py  video.py
api/app/repositories/: __init__.py  base.py  payment_repository.py  processing_repository.py  session_repository.py  subscription_repository.py  user_repository.py  video_repository.py
api/app/routes/: __init__.py  auth.py  billing.py  download.py  processing.py  sessions.py  upload.py
api/app/services/: __init__.py  billing_service.py  processing_service.py  session_service.py  usage_service.py  video_service.py
api/app/utils/: __init__.py  jwt.py  password.py
api/database/migrations/: 001_initial_schema.rollback.sql  001_initial_schema.sql  002_add_billing_tables.rollback.sql  002_add_billing_tables.sql  env.py
e2e/: accessibility.spec.ts  auth-flow.spec.ts  billing-flow.spec.ts  debug-ui.spec.ts  frontend-lite.spec.ts  processing-flow.spec.ts  quick-auth-test.spec.ts  upload-flow.spec.ts
e2e/fixtures/: README.md  create-test-video.js
e2e/utils/: test-helpers.ts
frame_picker/: __init__.py  cli.py  core.py
frontend-lite/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend-lite/src/: main.js  style.css
frontend/public/: asset-generator.html  robots.txt  site.webmanifest
infrastructure/: biome.json  package-lock.json  package.json
infrastructure/lib/: config.ts  infrastructure-stack.ts
laravel/: .env.example  .phpstorm.meta.php  Makefile  composer.json  docker-compose.yml  package-lock.json  package.json
laravel/routes/: web.php
supabase/: config.toml  seed.sql
supabase/migrations/: 20250601125136_initial_schema.sql  20250601125236_rls_policies.sql
tests/: __init__.py  conftest.py
tests/enums/: test_mode.py  test_payment_status.py  test_quality.py  test_status.py  test_subscription_status.py  test_subscription_type.py  test_tier.py
tests/models/: __init__.py
tests/test_integration/: test_billing_integration.py
tests/test_models/: test_base.py  test_billing.py  test_common.py  test_payment.py  test_processing.py  test_session.py  test_subscription.py  test_video.py
tests/test_repositories/: __init__.py  test_payment_repository.py  test_subscription_repository.py  test_user_repository.py
tests/test_routes/: __init__.py  test_auth.py  test_billing.py
tests/test_services/: test_billing_service.py  test_processing_service.py  test_session_service.py  test_usage_service.py  test_video_service.py
tests/test_utils/: test_jwt.py  test_password.py
(+122 files in other folders)
