[tool.poetry]
name = "frame-picker"
version = "0.1.0"
description = "AI-powered video frame selection microservice"
authors = ["Karol Binkowski <karolbinkowski3@proton.me>"]
readme = "README.md"
packages = [
    {include = "ai_service"}
]

[tool.poetry.dependencies]
python = "3.13.3"
# AI service dependencies
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "0.34.2"}
python-multipart = "0.0.20"
opencv-python = "4.11.0.86"
pillow = "11.2.1"
numpy = "2.2.6"

# Development
python-dotenv = "1.1.0"

[tool.poetry.scripts]
ai-service = "ai_service.main:run_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
black = "25.1.0"
isort = "6.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
