[tool.poetry]
name = "frame-picker"
version = "0.1.0"
description = "AI-powered video frame selection for profile pictures and action shots"
authors = ["Karol Binkowski <karolbinkowski3@proton.me>"]
readme = "README.md"
packages = [
    {include = "frame_picker"},
    {include = "api"}
]

[tool.poetry.dependencies]
python = "3.13.3"
click = "8.2.1"
opencv-python = "4.11.0.86"
pillow = "11.2.1"
numpy = "2.2.6"
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "0.34.2"}
python-multipart = "0.0.20"
pydantic = "2.11.5"
pydantic-settings = "2.9.1"
aiofiles = "24.1.0"
redis = "6.2.0"
python-dotenv = "1.1.0"
alembic = "1.16.1"
psycopg2-binary = "2.9.10"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
bcrypt = "4.3.0"
testcontainers = {extras = ["postgres"], version = "4.10.0"}
httpx = "0.28.1"
stripe = "12.2.0"

[tool.poetry.scripts]
frame-picker = "frame_picker.cli:main"
frame-picker-api = "api.app.main:run_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
black = "25.1.0"
isort = "6.0.1"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Mark tests that use asyncio",
]
